[gd_scene load_steps=5 format=3 uid="uid://bnto3syd2ib2w"]

[ext_resource type="Script" path="res://Assets/car.gd" id="1_763ql"]
[ext_resource type="PackedScene" uid="uid://bsvesbr1f0whd" path="res://tinkercad_gltf_scene.tscn" id="2_fbd77"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bqn7f"]

[sub_resource type="LabelSettings" id="LabelSettings_m74cl"]
font_size = 50

[node name="Car" type="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.732013, 0)
mass = 2000.0
physics_material_override = SubResource("PhysicsMaterial_bqn7f")
script = ExtResource("1_763ql")
level = "world_1"

[node name="frontLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.115794, 0.0230134, 1.20716)
use_as_traction = true
use_as_steering = true

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="frontLeft"]
transform = Transform3D(-8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 0, 0.2, 0, 0, 0)
radius = 2.5
height = 0.5
sides = 32

[node name="frontRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.741806, 0.0285327, 1.20004)
use_as_traction = true
use_as_steering = true

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="frontRight"]
transform = Transform3D(-8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 0, 0.2, 0, 0, 0)
radius = 2.5
height = 0.5
sides = 32

[node name="backLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.746425, 0.0302225, -0.790398)
use_as_traction = true

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="backLeft"]
transform = Transform3D(-8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 0, 0.2, 0, 0, 0)
radius = 2.5
height = 0.5
sides = 32

[node name="backRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.190135, 0.0428427, -0.793248)
use_as_traction = true

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="backRight"]
transform = Transform3D(-8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 0, 0.2, 0, 0, 0)
radius = 2.5
height = 0.5
sides = 32

[node name="centerMass" type="CSGBox3D" parent="."]
transform = Transform3D(0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0.368342, 0.583754, 0.265492)
size = Vector3(0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, -2.70151e-08, 8.3144e-08, 0, 0.951056, 0.309017, -8.74228e-08, 0.309017, -0.951056, 0, 2.71142, -5.20308)
current = true

[node name="Label" type="Label" parent="."]
offset_right = 1169.0
offset_bottom = 627.0
text = "Test"
label_settings = SubResource("LabelSettings_m74cl")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 939.0
offset_top = 22.0
offset_right = 1103.0
offset_bottom = 63.0
max_value = 500.0

[node name="Tinkercad GLTF Scene" parent="." instance=ExtResource("2_fbd77")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, -0.179433, 0)
